force-app/main/default/objects/Allocation__c/Allocation__c.object-meta.xml
<CustomObject>
    <description>Specifies information about profiles to be invited and grants to be made under this allocation&apos;s parent fund.</description>
    <label>Allocation</label>
    <nameField>
        <displayFormat>ALLOC-{000000}</displayFormat>
        <label>Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>