force-app/main/default/objects/Allocation__c/fields/Auto_assign_invites__c.field-meta.xml
<CustomField>
    <fullName>Auto_assign_invites__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, then online apps (code managing the grants community) can auto-assign new invites to this allocation.</description>
    <inlineHelpText>If checked, then online apps (code managing the grants community) can auto-assign new invites to this allocation.</inlineHelpText>
    <label>Auto-assign invites</label>
    <type>Checkbox</type>
</CustomField>