force-app/main/default/objects/Allocation__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments related to this allocation - can include any constraints on the invites and intended ratio of invites to grants</description>
    <inlineHelpText>Comments related to this allocation - can include any constraints on the invites and intended ratio of invites to grants</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>