force-app/main/default/objects/Allocation__c/fields/Countries__c.field-meta.xml
<CustomField>
    <fullName>Countries__c</fullName>
    <description>The intended countries for grants under this allocation</description>
    <inlineHelpText>The intended countries for grants under this allocation</inlineHelpText>
    <label>Countries</label>
    <type>TextArea</type>
</CustomField>