force-app/main/default/objects/Allocation__c/fields/Custom_Reqs__c.field-meta.xml
<CustomField>
    <fullName>Custom_Reqs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Custom Reqs, if any, that apply to proposals invited and grants awarded under this allocation</description>
    <inlineHelpText>The Custom Reqs, if any, that apply to proposals invited and grants awarded under this allocation</inlineHelpText>
    <label>Custom Reqs</label>
    <referenceTo>Custom_Reqs__c</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>