force-app/main/default/objects/Allocation__c/fields/Date_closed__c.field-meta.xml
<CustomField>
    <fullName>Date_closed__c</fullName>
    <description>The date on which this allocation is closed; in particular, no invites may be added after this date.</description>
    <inlineHelpText>The date on which this allocation is closed; in particular, no invites may be added after this date.</inlineHelpText>
    <label>Date closed</label>
    <type>Date</type>
</CustomField>