force-app/main/default/objects/Allocation__c/fields/Date_first_group_invited__c.field-meta.xml
<CustomField>
    <fullName>Date_first_group_invited__c</fullName>
    <description>The date on which the first group was invited to apply with full proposal under this allocation</description>
    <inlineHelpText>The date on which the first group was invited to apply with full proposal under this allocation</inlineHelpText>
    <label>Date first group invited</label>
    <summarizedField>Invite__c.Date_invited__c</summarizedField>
    <summaryForeignKey>Invite__c.Allocation__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>