force-app/main/default/objects/Allocation__c/fields/Date_invite_specs_completed__c.field-meta.xml
<CustomField>
    <fullName>Date_invite_specs_completed__c</fullName>
    <description>The date on which the invite specs for this allocation were completed.  Invite specs can include date fields, custom reqs, and the responsible GO staff member.</description>
    <inlineHelpText>The date on which the invite specs for this allocation were completed.  Invite specs can include date fields, custom reqs, and the responsible GO staff member.</inlineHelpText>
    <label>Date invite specs completed</label>
    <type>Date</type>
</CustomField>