force-app/main/default/objects/Allocation__c/fields/Date_of_award_notification__c.field-meta.xml
<CustomField>
    <fullName>Date_of_award_notification__c</fullName>
    <description>Date by which we promise to notify invited groups whether they have been awarded or not</description>
    <inlineHelpText>Date by which we promise to notify invited groups whether they have been awarded or not</inlineHelpText>
    <label>Date of award notification</label>
    <type>Date</type>
</CustomField>