force-app/main/default/objects/Allocation__c/fields/Date_of_first_invite__c.field-meta.xml
<CustomField>
    <fullName>Date_of_first_invite__c</fullName>
    <description>The date on which the first invite under this allocation was created</description>
    <inlineHelpText>The date on which the first invite under this allocation was created</inlineHelpText>
    <label>Date of first invite</label>
    <summarizedField>Invite__c.CreatedDate</summarizedField>
    <summaryForeignKey>Invite__c.Allocation__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>