force-app/main/default/objects/Allocation__c/fields/Date_prop_due__c.field-meta.xml
<CustomField>
    <fullName>Date_prop_due__c</fullName>
    <description>Date by which an invited group must submit their application</description>
    <inlineHelpText>Date by which an invited group must submit their application</inlineHelpText>
    <label>Date prop due</label>
    <type>Date</type>
</CustomField>