force-app/main/default/objects/Allocation__c/fields/Days_created_to_first_group_invited__c.field-meta.xml
<CustomField>
    <fullName>Days_created_to_first_group_invited__c</fullName>
    <description>The number of days from date created to date the first group was invited or to today if no group has yet been invited</description>
    <formula>BLANKVALUE(Date_first_group_invited__c, TODAY()) - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days from date created to date the first group was invited or to today if no group has yet been invited</inlineHelpText>
    <label>Days created to first group invited</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>