force-app/main/default/objects/Allocation__c/fields/Days_created_to_first_invite__c.field-meta.xml
<CustomField>
    <fullName>Days_created_to_first_invite__c</fullName>
    <description>The number of days from date created to date of the first invite or to today if no invite has been built</description>
    <formula>BLANKVALUE(DATEVALUE(Date_of_first_invite__c), TODAY()) - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days from date created to date of the first invite or to today if no invite has been built</inlineHelpText>
    <label>Days created to first invite</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>