force-app/main/default/objects/Allocation__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A brief description (short naming) of this allocation to help identify it</description>
    <inlineHelpText>A brief description (short naming) of this allocation to help identify it</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>