force-app/main/default/objects/Allocation__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External ID for use when importing/building related records</description>
    <externalId>true</externalId>
    <inlineHelpText>External ID for use when importing/building related records</inlineHelpText>
    <label>ExternalID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>