force-app/main/default/objects/Allocation__c/fields/For_invitation__c.field-meta.xml
<CustomField>
    <fullName>For_invitation__c</fullName>
    <description>Suggestions for letter inviting to proposal</description>
    <inlineHelpText>Suggestions for letter inviting to proposal</inlineHelpText>
    <label>For invitation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>For_invitation</valueSetName>
    </valueSet>
</CustomField>