force-app/main/default/objects/Allocation__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <description>The parent fund of this allocation</description>
    <inlineHelpText>The parent fund of this allocation</inlineHelpText>
    <label>Fund</label>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>