force-app/main/default/objects/Allocation__c/fields/Grant_size__c.field-meta.xml
<CustomField>
    <fullName>Grant_size__c</fullName>
    <description>The planned amount of a grant to be awarded under this allocation</description>
    <inlineHelpText>The planned amount of a grant to be awarded under this allocation</inlineHelpText>
    <label>Grant size</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>