force-app/main/default/objects/Allocation__c/fields/Num_grants__c.field-meta.xml
<CustomField>
    <fullName>Num_grants__c</fullName>
    <description>The planned number of grants to be awarded under this allocation</description>
    <inlineHelpText>The planned number of grants to be awarded under this allocation</inlineHelpText>
    <label>Num grants</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>