force-app/main/default/objects/Allocation__c/fields/Num_grants_awarded__c.field-meta.xml
<CustomField>
    <fullName>Num_grants_awarded__c</fullName>
    <description>The number of awarded grants under this allocation</description>
    <inlineHelpText>The number of awarded grants under this allocation</inlineHelpText>
    <label>Num grants awarded</label>
    <summaryFilterItems>
        <field>Invite__c.Grant__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Invite__c.Date_eliminated__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Invite__c.Allocation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>