force-app/main/default/objects/Allocation__c/fields/Num_invited__c.field-meta.xml
<CustomField>
    <fullName>Num_invited__c</fullName>
    <description>The number of groups under this allocation that have either been invited or linked to a proposal</description>
    <inlineHelpText>The number of groups under this allocation that have either been invited or linked to a proposal</inlineHelpText>
    <label>Num invited</label>
    <summaryFilterItems>
        <field>Invite__c.Invited_or_has_proposal__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Invite__c.Date_eliminated__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Invite__c.Allocation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>