force-app/main/default/objects/Allocation__c/fields/Num_invites__c.field-meta.xml
<CustomField>
    <fullName>Num_invites__c</fullName>
    <description>The number of invite records under this allocation</description>
    <inlineHelpText>The number of invite records under this allocation</inlineHelpText>
    <label>Num invites</label>
    <summaryForeignKey>Invite__c.Allocation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>