force-app/main/default/objects/Allocation__c/fields/Num_to_invite__c.field-meta.xml
<CustomField>
    <fullName>Num_to_invite__c</fullName>
    <description>The number of profiles to invite to full proposal</description>
    <inlineHelpText>The number of profiles to invite to full proposal</inlineHelpText>
    <label>Num to invite</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>