force-app/main/default/objects/Allocation__c/fields/Projection__c.field-meta.xml
<CustomField>
    <fullName>Projection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked projection indicates that funding for this allocation depends on funding for the linked projection.</description>
    <inlineHelpText>Linked projection indicates that funding for this allocation depends on funding for the linked projection.</inlineHelpText>
    <label>Projection</label>
    <referenceTo>Projection__c</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>