force-app/main/default/objects/Allocation__c/fields/Projection_funded__c.field-meta.xml
<CustomField>
    <fullName>Projection_funded__c</fullName>
    <description>Checked if there is a linked projection, which has been linked to a fund</description>
    <formula>AND(
 NOT(ISBLANK(Projection__c )),
 NOT(ISBLANK( Projection__r.Fund__c ))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if there is a linked projection, which has been linked to a fund</inlineHelpText>
    <label>Projection funded</label>
    <type>Checkbox</type>
</CustomField>