force-app/main/default/objects/Allocation__c/fields/Thematic_priority__c.field-meta.xml
<CustomField>
    <fullName>Thematic_priority__c</fullName>
    <description>The thematic priority for proposals/grants under this allocation</description>
    <inlineHelpText>The thematic priority for proposals/grants under this allocation</inlineHelpText>
    <label>Thematic priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Thematic_priorities</valueSetName>
    </valueSet>
</CustomField>