force-app/main/default/objects/Allocation__c/fields/Total_allocated__c.field-meta.xml
<CustomField>
    <fullName>Total_allocated__c</fullName>
    <description>The planned total grant $ to be awarded under this allocation, calculated from the fields for number of grants and grant size</description>
    <formula>IF(NOT(ISBLANK( Num_grants__c )) &amp;&amp; NOT(ISBLANK( Grant_size__c )) ,
 Num_grants__c * Grant_size__c,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The planned total grant $ to be awarded under this allocation, calculated from the fields for number of grants and grant size</inlineHelpText>
    <label>Total allocated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>