force-app/main/default/objects/Allocation__c/fields/Total_awarded__c.field-meta.xml
<CustomField>
    <fullName>Total_awarded__c</fullName>
    <description>Total of awarded grants under this allocation</description>
    <inlineHelpText>Total of awarded grants under this allocation</inlineHelpText>
    <label>Total awarded</label>
    <summarizedField>Invite__c.Amount_awarded__c</summarizedField>
    <summaryFilterItems>
        <field>Invite__c.Grant__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Invite__c.Date_eliminated__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Invite__c.Allocation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>