force-app/main/default/objects/Allocation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>&quot;Standard&quot;</defaultValue>
    <description>The type of this allocation</description>
    <inlineHelpText>The type of this allocation</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Crisis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>