force-app/main/default/objects/Allocation__c/validationRules/ActiveFundOnlyOnCreate.validationRule-meta.xml
<ValidationRule>
    <fullName>ActiveFundOnlyOnCreate</fullName>
    <active>true</active>
    <description>Allocations may only be created on active funds</description>
    <errorConditionFormula>AND(
 ISNEW(),
 NOT(Fund__r.Active__c)
)</errorConditionFormula>
    <errorDisplayField>Fund__c</errorDisplayField>
    <errorMessage>Allocations may only be created on active funds</errorMessage>
</ValidationRule>