force-app/main/default/objects/Allocation__c/validationRules/LinkedProjectionNotFunded.validationRule-meta.xml
<ValidationRule>
    <fullName>LinkedProjectionNotFunded</fullName>
    <active>true</active>
    <description>Date invite specs completed may not be set until the linked projection record is funded, that is, linked to a fund.</description>
    <errorConditionFormula>AND(
 NOT(ISBLANK( Date_invite_specs_completed__c )),
 OR(
  ISCHANGED( Date_invite_specs_completed__c ), 
  ISNEW()
 ),
 NOT(ISBLANK( Projection__c )),
 NOT(Projection_funded__c)
)</errorConditionFormula>
    <errorMessage>Date invite specs completed may not be set until the linked projection record is funded, that is, linked to a fund.</errorMessage>
</ValidationRule>