force-app/main/default/objects/Allocation__c/validationRules/StandardFundsOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>StandardFundsOnly</fullName>
    <active>true</active>
    <description>Allocations may only be created on standard funds</description>
    <errorConditionFormula>Fund__r.RecordType.DeveloperName != &quot;Standard&quot;</errorConditionFormula>
    <errorDisplayField>Fund__c</errorDisplayField>
    <errorMessage>Allocations may only be created on standard funds</errorMessage>
</ValidationRule>