force-app/main/default/objects/Allocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fund__c</columns>
    <columns>Grant_size__c</columns>
    <columns>Num_grants__c</columns>
    <columns>Total_allocated__c</columns>
    <columns>Num_to_invite__c</columns>
    <columns>Comments__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>